bash-startup
============

Version: 0.2.1-9000 [2017-12-15]

 o ...

BUG FIXES:

 o Output functions produced 'tput: No value for $TERM and no -T specified'
   if TERM was not set.  Now 'tput' (for colored output) is only used if
   supported.
 
 o key=value pairs did not acknowledge periods (.), e.g. 'abc.def=123' would
   be parsed as key='abc.def' not as 'def'.
  

Version: 0.2.1 [2017-12-12]
 
SOFTWARE QUALITY:

 o Added shellcheck tests ('make check'), which also run on Travis CI.
 

Version: 0.2.0 [2017-12-11]

NEW FEATURES:

 o source_d() now supports key=value and key!=value filtering where 'key'
   is any environment variable or one of the predefined built-in keys,
   i.e. 'interactive'.  Note that it will only filter on the key if its
   value is non-empty.

SOFTWARE QUALITY:

 o Added unit tests ('make test'), which run on Travis CI.


Version: 0.1.0 [2017-12-10]

 o Created bash-startup script with functions generalized from a set of
   in-house functions created over a few years.